addressed sonarcloud issues and cleanup